--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,11 @@ body {
 
 /* main__icons */
 .main__icons {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    justify-content: center;
+
     .icon {
         width: 75px;
         height: 75px;
@@ -124,7 +129,7 @@ body {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin: 30px;
+        margin: 10px;
         cursor: pointer;
         text-align: center;
 
@@ -363,4 +368,37 @@ body {
 
         }
     }
+}
+
+.member {
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
+}
+
+.member ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.member li {
+    margin-bottom: 10px;
+    margin-right: 5px;
+    list-style: none;
+}
+
+.member img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: block;
+}
+
+.member a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 12px;
 }
