--- a/effect/assets/css/parallax.css
+++ b/effect/assets/css/parallax.css
@@ -19,6 +19,10 @@ body {
     background-color: #f2ebf1;
 }
 
+body.bg2 {
+    background-color: #BFCABD;
+}
+
 /* header */
 #header {
     position: fixed;
@@ -63,4 +67,29 @@ body {
     background-size: 13px;
     background-repeat: no-repeat;
     background-position: right center;
+}
+
+/* footer */
+.footer__inner nav {
+    position: fixed;
+    left: 10px;
+    bottom: 10px;
+    font-family: 'poppins';
+}
+
+.footer__inner nav ul {
+    display: flex;
+}
+
+.footer__inner nav li a {
+    margin-right: 5px;
+    padding: 2px 10px;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'NexonLv1Gothic';
+}
+
+.footer__inner nav li.active a {
+    text-emphasis: circle;
 }
