--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -190,6 +190,23 @@ li {
     font-family: var(--fontN);
 }
 
+.main__menu ul li a em {
+    font-style: normal;
+}
+
+.main__menu ul li a em::before {
+    content: '';
+    width: 100%;
+    height: 8px;
+    border-radius: 10px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    /* transform: ; */
+}
+
 
 .main__menu ul li a:hover {
     text-decoration: underline;
@@ -222,6 +239,36 @@ li {
     font-family: var(--fontN);
     line-height: 1.5;
     color: #666;
+}
+
+.main__sample .sample .notice {
+    background-color: #F6F6F6;
+    padding: 15px;
+    border-left: 5px solid rgb(29, 149, 255);
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
+
+.main__sample .sample ul {
+    margin-bottom: 15px;
+}
+
+.main__sample .sample li {
+    font-family: var(--fontN);
+    line-height: 1.9;
+    color: #666;
+    position: relative;
+    padding-left: 12px;
+}
+
+.main__sample .sample li::before {
+    content: '';
+    width: 4px;
+    height: 4px;
+    background-color: rgb(29, 149, 255);
+    position: absolute;
+    left: 0;
+    top: 10px;
 }
 
 /* 메인 메뉴 */
