--- a/webd/site/siteA/css/style.css
+++ b/webd/site/siteA/css/style.css
@@ -195,40 +195,111 @@ img {
 #contents .banner {
   width: 400px;
   height: 200px;
-  background-color: url(../images/)
+  background-image: url(../images/banner.jpg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* 플렉스, aic, jcc 가운데 정렬 */
+  flex-direction: column;
+  /* 줄바꿈 */
 }
 
+#contents .banner h3 {
+  color: #fff;
+  font-size: 26px;
+}
+
+#contents .banner a {
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 10px 20px;
+  color: #fff;
+  border-radius: 50px;
+  margin-top: 10px;
+}
+
+#contents .banner a:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+/* link */
 #contents .link {
   width: 400px;
   height: 200px;
-  background-color: #bcbcbc;
+  background-image: url(../images/link.jpg);
+}
+
+#contents .link h3 {
+  color: #Fff;
+  padding: 20px;
+}
+
+#contents .link a {
+  width: 100px;
+  height: 100px;
+  background-color: rgba(1, 52, 96, 0.8);
+  display: block;
+  border-radius: 50%;
+  text-align: center;
+  color: #fff;
+  line-height: 100px;
+  margin: 0 auto;
+}
+
+#contents .link a :hover {
+  background-color: rgba(1, 52, 96, 1);
 }
 
 #footer {
   width: 100%;
   display: flex;
+  background-color: #e7e7e7;
 }
 
 #footer .footer1 {
   width: 20%;
   height: 100px;
-  background-color: #aaa;
+}
+
+#footer .footer1 h4 {
+  font-size: 30px;
+  color: #7f7f7f;
+  padding: 32px 30px;
 }
 
 #footer .footer2 {
   width: 80%;
-  height: 100px;
-  background-color: #a3a3a3;
 }
 
 #footer .footer2 .footer2-1 {
   width: 100%;
   height: 50px;
-  background-color: #ababab;
+  text-align: center;
+}
+
+
+#footer .footer2 .footer2-1 ul {
+  padding-top: 24px;
+}
+
+#footer .footer2 .footer2-1 li {
+  display: inline-block;
+  border-right: 1px solid #333;
+  /* 개인정보처리방침 옆에 선처리 */
+}
+
+#footer .footer2 .footer2-1 li a {
+  padding: 10px;
+}
+
+#footer .footer2 .footer2-1 li a:hover {
+  text-decoration: underline;
+  /* 오버했을 때 밑줄 처리 */
 }
 
 #footer .footer2 .footer2-2 {
   width: 100%;
   height: 50px;
-  background-color: #a9a9a9;
+  text-align: center;
+  padding-top: 10px;
+  box-sizing: border-box;
 }
