--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background-image: url(../img/wallpaper.jpg);
+    background-image: url(../img/wallpaper2.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
