--- a/webd/site/siteE/css/style.css
+++ b/webd/site/siteE/css/style.css
@@ -1,146 +1,358 @@
 @charset "UTF-8";
 
+/* reset */
 * {
     margin: 0;
     padding: 0;
+    color: #333;
 }
 
 a {
     text-decoration: none;
-    color: #333333;
-    box-sizing: border-box;
+    color: #333;
 }
 
 li {
     list-style: none;
 }
 
+img {
+    width: 100%;
+    vertical-align: top;
+}
+
 #wrap {
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
 }
 
+/* main */
+#main {
+    width: 100%;
+    height: calc(100vh - 120px);
+    display: flex;
+}
+
+/* header */
 #header {
     width: 200px;
+    height: 100%;
 }
-
 
 #header .logo {
     width: 100%;
-    height: 100px;
-    background-color: #eee;
+    text-align: center;
 }
 
+#header .logo a {
+    display: block;
+    padding: 24px;
+    color: #b40000;
+}
+
+/* nav */
 #header .nav {
     width: 100%;
-    height: 650px;
+    height: 90%;
     background-color: #e3e3e3;
 }
 
+#header .nav>ul>li {
+    text-align: center;
+    position: relative;
+}
 
-#main {
+#header .nav>ul>li>a {
+    display: inline-block;
+    padding: 10px;
+    background-color: #ff6d6d;
+    width: 100%;
+    box-sizing: border-box;
+    color: #fff;
+}
+
+#header .nav>ul>li>a:hover {
+    background-color: #ff8888;
+}
+
+#header .nav>ul>li>ul {
+    display: none;
+    position: absolute;
+    right: -200px;
+    top: 0;
+    width: 200px;
+}
+
+#header .nav>ul>li>ul>li>a {
+    display: inline-block;
+    padding: 10px;
+    background-color: #ff6d6d;
+    width: 100%;
+    box-sizing: border-box;
+    color: #fff;
+}
+
+#header .nav>ul>li>ul>li>a:hover {
+    background-color: #ffa9a9;
+}
+
+/* contents */
+#contents {
     width: 400px;
+}
+
+/* banner */
+#contents .banner {
+    width: 100%;
+    height: 15%;
+    background: url(../images/banner.jpg) no-repeat center;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
-#main .con1 {
-    width: 400px;
-    height: 300px;
-    background-color: #dbc1c1;
+#contents .banner h3 {
+    color: #ffefef;
 }
 
-#main .con1 .notice h3 {
-    margin-top: 50px;
-    font-size: 20px;
-    padding: 20px;
-    /* margin-bottom: 10px; */
-}
-
-#main .con1 .notice ul>li {
-    /* padding: 0 20px; */
+#contents .banner a {
+    color: #fff;
+    background-color: #ff6d6dc1;
     padding: 10px 20px;
-    text-decoration-line: underline;
+    border-radius: 40px;
+    margin-left: 10px;
 }
 
-#main .con1 .notice ul>li span {
+#contents .banner a:hover {
+    background-color: #ff6d6d
+}
+
+/* notice */
+#contents .notice {
+    width: 100%;
+    height: 35%;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: relative;
+}
+
+#contents .notice h3 {
+    background-color: #ff6d6d;
+    color: #fff;
+    padding: 4px 10px;
+    margin-bottom: 10px;
+}
+
+#contents .notice ul {}
+
+#contents .notice li {
+    display: flex;
+    position: relative;
+    padding-left: 10px;
+    line-height: 1.5;
+}
+
+#contents .notice li::before {
+    content: '';
+    width: 5px;
+    height: 5px;
+    background-color: #333;
+    position: absolute;
+    left: 0;
+    top: 8px;
+    border-radius: 50%;
+}
+
+#contents .notice li a {
+    width: 75%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    /* overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    : 한줄 효과 */
+}
+
+#contents .notice li a:hover {
+    text-decoration: underline;
+}
+
+#contents .notice li span {
+    width: 25%;
     text-align: right;
 }
 
-#main .con2 {
-    width: 400px;
-    height: 450px;
-    background-color: #ddd;
+#contents .notice .more {
+    position: absolute;
+    right: 26px;
+    top: 26px;
+    color: #fff;
 }
 
+/* gallery */
+#contents .gallery {
+    width: 100%;
+    height: 35%;
+    background-color: #ffecec;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: relative;
+}
+
+#contents .gallery h3 {
+    background-color: #ff6d6d;
+    color: #fff;
+    padding: 4px 10px;
+    margin-bottom: 10px;
+}
+
+#contents .gallery ul {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#contents .gallery li {
+    width: 110px;
+    height: 150px;
+    background-size: cover;
+}
+
+#contents .gallery li:nth-last-child(1) {
+    background-image: url(../images/gallery1.jpg);
+}
+
+#contents .gallery li:nth-last-child(2) {
+    background-image: url(../images/gallery2.jpg);
+}
+
+#contents .gallery li:nth-last-child(3) {
+    background-image: url(../images/gallery3.jpg);
+}
+
+#contents .gallery li a {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3;
+}
+
+#contents .gallery li a:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+#contents .gallery .more {
+    position: absolute;
+    right: 26px;
+    top: 26px;
+    color: #fff;
+}
+
+/* link */
+#contents .link {
+    width: 100%;
+    height: 15%;
+}
+
+#contents .link h3 {
+    display: none;
+}
+
+#contents .link ul {
+    display: flex;
+    padding: 0 10px;
+}
+
+#contents .link li {
+    width: 25%;
+    padding: 5px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+#contents .link li a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* 아이콘과 텍스트 수평으로 가운데 정렬 */
+}
+
+#contents .link li a img {
+    width: 50px;
+    /* 이미지 크기 조정 */
+}
+
+#contents .link li a span {
+    margin-top: 5px;
+    /* 텍스트와 아이콘 사이 간격 조정 */
+}
+
+#contents .link li:hover a span {
+    color: #ff6d6d;
+}
+
+/* slider */
 #slider {
     width: calc(100% - 600px);
-    height: 750px;
-    background-color: #d9d9d9;
+    height: 100%;
+    background-color: #b1b1b1;
 }
 
+#slider .sliderWrap {}
+
+#slider .sliderWrap .slider {}
+
+#slider .sliderWrap .text {}
+
+#slider .sliderWrap .text h3 {}
+
+#slider .sliderWrap .text p {}
+
+#slider .sliderWrap .slider.s1 {}
+
+#slider .sliderWrap .slider.s2 {}
+
+#slider .sliderWrap .slider.s3 {}
+
+/* footer */
 #footer {
     width: 100%;
     display: flex;
+    text-align: center;
 }
 
 #footer .footer1 {
     width: 200px;
-    height: 100px;
-    background-color: #ccc;
+    height: 120px;
+    background-color: #a3a3a3;
 }
 
 #footer .footer2 {
     width: calc(100% - 500px);
-    height: 100px;
-    background-color: #c3c3c3;
+}
+
+#footer .footer2 .footer2-1 {
+    width: 100%;
+    height: 60px;
+    background-color: #9d9d9d;
+}
+
+#footer .footer2 .footer2-2 {
+    width: 100%;
+    height: 60px;
+    background-color: #929292;
 }
 
 #footer .footer3 {
     width: 300px;
-    height: 100px;
-    background-color: #c7c7c7;
-}
-
-/* nav */
-.nav {}
-
-.nav>ul {}
-
-.nav>ul>li {
-    /* position: relative; */
-}
-
-.nav>ul>li>a {
-    width: 100%;
-    padding: 10px;
-    display: block;
-    text-align: left;
-    background-color: #b1b1b1;
-}
-
-.nav>ul>li>a:hover {
-    background-color: #696969;
-}
-
-.nav>ul>li>ul {
-    display: none;
-    /* position: absolute;
-    left: 0;
-    top: 50; */
-}
-
-.nav>ul>li>ul>li {}
-
-.nav>ul>li>ul>li>a {
-    width: 100%;
-    padding: 10px;
-    display: block;
-    text-align: left;
-    background-color: #a3a3a3;
-}
-
-.nav>ul>li>ul>li>a:hover {
-    background-color: #696969;
+    height: 120px;
+    background-color: #848484;
 }
