--- a/webd/site/siteE/css/test.css
+++ b/webd/site/siteE/css/test.css
@@ -8,8 +8,8 @@
 }
 
 a {
-    color: #333;
     text-decoration: none;
+    color: #333;
 }
 
 li {
@@ -18,9 +18,10 @@ li {
 
 img {
     width: 100%;
-    vertical-align: top;
+    display: block;
 }
 
+/* wrap */
 #wrap {
     width: 100%;
     position: relative;
@@ -37,7 +38,7 @@ img {
 #header {
     width: 200px;
     height: 100%;
-    background-color: #9e5555ee;
+    background-color: #ffe5e5;
 }
 
 #header .logo {
@@ -46,15 +47,16 @@ img {
 }
 
 #header .logo a {
-    display: block;
     padding: 24px;
-    color: #efefef;
+    display: block;
+    color: #b40000;
 }
 
-/* nav */
 #header .nav {
     width: 100%;
     height: 90%;
+    position: relative;
+    z-index: 1000;
 }
 
 #header .nav>ul>li {
@@ -65,44 +67,43 @@ img {
 #header .nav>ul>li>a {
     padding: 10px;
     display: inline-block;
-    background-color: #ca2727;
+    background-color: #ff6d6d;
     width: 100%;
     box-sizing: border-box;
     color: #fff;
 }
 
 #header .nav>ul>li>a:hover {
-    background-color: #ca2727bc;
+    background-color: #ff8888;
 }
 
 #header .nav>ul>li>ul {
-    display: none;
     position: absolute;
     right: -200px;
     top: 0;
     width: 200px;
+    display: none;
 }
 
-#header .nav>ul>li>ul>li>a {
+#header .nav>ul>li>ul>li a {
     padding: 10px;
     display: inline-block;
-    background-color: #ca2727;
+    background-color: #ff6d6d;
     width: 100%;
-    box-sizing: border-box;
     color: #fff;
+    box-sizing: border-box;
 }
 
-#header .nav>ul>li>ul>li>a:hover {
-    background-color: #ca2727bc;
+#header .nav>ul>li>ul>li a:hover {
+    background-color: #ffa9a9;
 }
 
 /* contents */
 #contents {
     width: 400px;
-    height: 100%;
 }
 
-/* #contents :banner */
+/* contents : banner */
 #contents .banner {
     width: 100%;
     height: 15%;
@@ -113,34 +114,34 @@ img {
 }
 
 #contents .banner h3 {
-    color: #fff;
+    color: #ffefef;
     font-size: 24px;
-    padding-right: 10px;
 }
 
 #contents .banner a {
     color: #fff;
-    background-color: #ca2727bc;
+    background-color: #ff6d6dc1;
     padding: 10px 20px;
     border-radius: 40px;
+    margin-left: 10px;
 }
 
 #contents .banner a:hover {
-    background-color: #ca2727;
+    background-color: #ff6d6d;
 }
 
-/* #contents :notice */
+/* contents : notice */
 #contents .notice {
     width: 100%;
     height: 35%;
     padding: 20px;
     box-sizing: border-box;
-    position: relative;
     overflow: hidden;
+    position: relative;
 }
 
 #contents .notice h3 {
-    background-color: #ca2727;
+    background-color: #ff6d6d;
     color: #fff;
     padding: 4px 10px;
     margin-bottom: 10px;
@@ -149,15 +150,15 @@ img {
 #contents .notice li {
     display: flex;
     position: relative;
-    line-height: 1.4;
     padding-left: 10px;
+    line-height: 1.6;
 }
 
 #contents .notice li::before {
     content: '';
     width: 6px;
     height: 6px;
-    background-color: #333;
+    background-color: #ff6d6d;
     position: absolute;
     left: 0;
     top: 8px;
@@ -169,9 +170,6 @@ img {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    /*  overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap; : 한줄효과 */
 }
 
 #contents .notice li a:hover {
@@ -185,24 +183,24 @@ img {
 
 #contents .notice .more {
     position: absolute;
-    right: 24px;
+    right: 26px;
     top: 26px;
     color: #fff;
-    font-size: 14px;
 }
 
-/* #contents :gallery */
+/* contents : gallery */
 #contents .gallery {
     width: 100%;
     height: 35%;
     background-color: #ffecec;
     padding: 20px;
     box-sizing: border-box;
+    overflow: hidden;
     position: relative;
 }
 
 #contents .gallery h3 {
-    background-color: #ca2727;
+    background-color: #ff6d6d;
     color: #fff;
     padding: 4px 10px;
     margin-bottom: 10px;
@@ -211,7 +209,6 @@ img {
 #contents .gallery ul {
     display: flex;
     justify-content: space-between;
-    /* 갤러리 이미지 가로정렬 후 jcsb로 간격줌 */
 }
 
 #contents .gallery li {
@@ -221,15 +218,15 @@ img {
 }
 
 #contents .gallery li:nth-child(1) {
-    background-image: url(../images/gallery1.jpg);
+    background-image: url(../images/gallery01.jpg);
 }
 
 #contents .gallery li:nth-child(2) {
-    background-image: url(../images/gallery2.jpg);
+    background-image: url(../images/gallery02.jpg);
 }
 
 #contents .gallery li:nth-child(3) {
-    background-image: url(../images/gallery3.jpg);
+    background-image: url(../images/gallery03.jpg);
 }
 
 #contents .gallery li a {
@@ -245,18 +242,17 @@ img {
 }
 
 #contents .gallery li a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 #contents .gallery .more {
     position: absolute;
-    right: 24px;
+    right: 26px;
     top: 26px;
     color: #fff;
-    font-size: 14px;
 }
 
-/* #contents :link */
+/* contents : link */
 #contents .link {
     width: 100%;
     height: 15%;
@@ -267,6 +263,7 @@ img {
     width: 1px;
     height: 1px;
     overflow: hidden;
+    text-indent: -9999px;
 }
 
 #contents .link ul {
@@ -276,36 +273,29 @@ img {
 
 #contents .link li {
     width: 25%;
-    padding: 5px;
+    padding: 5%;
     box-sizing: border-box;
     text-align: center;
 }
 
 #contents .link li:hover a span {
-    color: #ca2727;
-    font-size: 14px;
-    transition: all 0.3s;
+    color: #ff6d6d;
 }
 
-#contents .link li a img {
-    width: 80%;
-    height: auto;
-}
-
-/* slider */
-#slider {
+/* silder */
+#silder {
     width: calc(100% - 600px);
     height: 100%;
     overflow: hidden;
 }
 
-#slider .sliderWrap {
+#silder .sliderWrap {
     width: 400%;
     height: 100%;
     display: flex;
 }
 
-#slider .sliderWrap .slider {
+#silder .sliderWrap .slider {
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -315,44 +305,45 @@ img {
     justify-content: center;
 }
 
-#slider .sliderWrap .slider .text {
-    background-color: #771a1aae;
+#silder .sliderWrap .slider .text {
+    background-color: #ff6d6da3;
     width: 300px;
     height: 300px;
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
     flex-direction: column;
     border-radius: 50%;
 }
 
-#slider .sliderWrap .slider .text h3 {
+#silder .sliderWrap .slider .text h3 {
     color: #fff;
-    font-size: 24px;
+    font-size: 20px;
 }
 
-#slider .sliderWrap .slider .text p {
+#silder .sliderWrap .slider .text p {
     color: #fff;
     margin-top: 5px;
 }
 
-#slider .sliderWrap .slider.s1 {
-    background-image: url(../images/slider1.jpg);
+#silder .sliderWrap .slider.s1 {
+    background-image: url(../images/slider01.jpg);
 }
 
-#slider .sliderWrap .slider.s2 {
-    background-image: url(../images/slider2.jpg);
+#silder .sliderWrap .slider.s2 {
+    background-image: url(../images/slider02.jpg);
 }
 
-#slider .sliderWrap .slider.s3 {
-    background-image: url(../images/slider3.jpg);
+#silder .sliderWrap .slider.s3 {
+    background-image: url(../images/slider03.jpg);
 }
 
 /* footer */
 #footer {
     width: 100%;
     display: flex;
+    background-color: #efefef;
 }
 
 #footer .footer1 {
@@ -361,8 +352,6 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fdfdfd;
-
 }
 
 #footer .footer1 h4 {
@@ -381,7 +370,7 @@ img {
 }
 
 #footer .footer2 .footer2-1 ul {
-    margin-top: 10px;
+    padding-top: 10px;
 }
 
 #footer .footer2 .footer2-1 li {
@@ -392,7 +381,7 @@ img {
     content: '|';
 }
 
-#footer .footer2 .footer2-1 li:last-child::after {
+#footer .footer2 .footer2-1 li:last-child:after {
     content: '';
 }
 
@@ -408,7 +397,7 @@ img {
 #footer .footer2 .footer2-2 {
     width: 100%;
     height: 60px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
 }
@@ -432,25 +421,25 @@ img {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 250px;
-    height: 250px;
-    background-color: #d8ccccbc;
-    border: 4px solid #ca2727;
+    width: 300px;
+    height: 300px;
+    background-color: #ffcbcb;
+    border: 4px solid #ff6d6d;
     padding: 20px;
-    color: #ca2727;
     display: none;
 }
 
 .popup-view h3 {
     font-size: 24px;
     margin-bottom: 15px;
-    border-bottom: 2px solid #ca2727;
+    border-bottom: 2px solid #ff6d6d;
+    color: #ff6d6d;
 }
 
 .popup-close {
     display: inline-block;
     padding: 8px 20px;
-    background-color: #ca2727;
+    background-color: #ff6d6d;
     color: #fff;
     position: absolute;
     left: 50%;
